# othello

./: .gitignore  CMakeLists.txt  README.md  a.out  aho.cpp  aho.hpp  alphabeta.cpp  alphabeta.hpp  apgame.cpp  battle.cpp  bitboard.cpp  bitboard.hpp  check.cpp  constants.hpp  functions.cpp  functions.hpp  game.cpp  game.hpp  learner.cpp  learner.hpp  man.cpp  man.hpp  mcts.cpp  mcts.hpp  network.cpp  network.hpp  player.cpp  player.hpp  primitivemc.cpp  primitivemc.hpp  td.cpp  td.hpp  test.cpp  trainer.cpp  trainer.hpp  training.cpp
build2/: CMakeCache.txt  Makefile  a.out  battle_menu  cmake_install.cmake  log
include/: alphabeta.hpp  constants.hpp  functions.hpp  game.hpp  learner.hpp  man.hpp  network.hpp  player.hpp  td.hpp  trainer.hpp
